Xwayland doesn't filter out modifiers not supported by GBM
- Start gamescope, a Vulkan-based Wayland compositor, on an AMD GPU
- Set
R600_DEBUG=nodcc
to disable some AMD modifiers for EGL/GBM users - Start vkcube, a Vulkan client
Both the compositor and the client will support AMD DCC modifiers. However Xwayland won't (because GBM support for DCC modifiers is disabled by the env). This will result in a BadAlloc
error sent to the client as a reply to DRI3PixmapFromBuffers
.
Xwayland should filter out any modifier advertised by the parent compositor that it doesn't support.
Here this happens because of an env var, this could also happen because support for a new modifier has been plumbed in Vulkan but not in EGL yet.
Original issue: https://github.com/Plagman/gamescope/issues/185